--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@bpmn-io/properties-panel": "0.13.2",
     "axios": "^0.27.2",
     "bpmn-js": "^9.2.2",
-    "bpmn-js-properties-panel": "^1.1.1",
+    "bpmn-js-properties-panel": "1.1.0",
     "camunda-bpmn-moddle": "^6.1.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
