--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "element-ui": "^2.15.9",
     "min-dash": "^3.5.2",
     "vue": "^2.6.11",
-    "vue-i18n": "^9.1.10",
+    "vue-i18n": "8.27.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
