--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.17.12",
+    "@babel/plugin-proposal-optional-chaining": "^7.17.12",
     "@bpmn-io/properties-panel": "0.13.2",
     "axios": "^0.27.2",
     "bpmn-js": "^9.2.2",
