--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^2.15.9",
     "highlight.js": "^10.5.0",
     "min-dash": "^3.5.2",
+    "three": "^0.141.0",
     "vue": "^2.6.11",
     "vue-i18n": "8.27.1",
     "vue-router": "^3.2.0",
