--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
     "highlight.js": "^10.5.0",
+    "js-cookie": "^3.0.1",
+    "jsencrypt": "^3.0.0-rc.1",
     "min-dash": "^3.5.2",
     "three": "^0.141.0",
     "vue": "^2.6.11",
