--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-i18n": "8.27.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.1.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
