--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@bpmn-io/properties-panel": "0.13.2",
     "axios": "^0.27.2",
     "bpmn-js": "^9.2.2",
+    "bpmn-js-color-picker": "^0.4.0",
     "bpmn-js-properties-panel": "1.1.0",
     "camunda-bpmn-moddle": "^6.1.2",
     "core-js": "^3.6.5",
