--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "camunda-bpmn-moddle": "^6.1.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.9",
+    "file-saver": "^2.0.5",
     "highlight.js": "^10.5.0",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.0.0-rc.1",
@@ -28,6 +29,7 @@
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.1.0",
+    "xlsx": "^0.18.5",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
