--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-ui": "^2.15.9",
     "file-saver": "^2.0.5",
     "highlight.js": "^10.5.0",
+    "js-base64": "^3.7.2",
     "js-cookie": "^3.0.1",
     "jsencrypt": "^3.0.0-rc.1",
     "min-dash": "^3.5.2",
